po: fix WiFi to Wi-Fi
This is for translator convenience.

--- a/po/af.po
+++ b/po/af.po
@@ -96,7 +96,7 @@ msgstr ""
 "word."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Deaktiveer Wi-Fi-skep"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -882,7 +882,7 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
