--- a/po/an.po
+++ b/po/an.po
@@ -89,7 +89,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "S'usa ta determinar si os achustes d'han de migrar a la nueva versión."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Desactivar a creyación de ret inalámbrico"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -877,8 +877,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
