--- a/po/ar.po
+++ b/po/ar.po
@@ -92,7 +92,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "يستخدم لتحديد اذا ما الخيارات يجب ان ترحّل الى اصدار جديد."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "عطل انشاء الاتصال اللاسلكي "
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -873,7 +873,7 @@ msgstr "إيثرنت (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 واي فاي (%s)"
 
 #: ../src/applet-dialogs.c:502
