--- a/po/as.po
+++ b/po/as.po
@@ -90,8 +90,8 @@ msgstr ""
 "নতুন সংস্কৰণত সংহতিসমূহ প্ৰব্ৰজন কৰা হ'ব নে নহয় নিৰ্ধাৰণ কৰিবলৈ ইয়াক ব্যৱহাৰ কৰা হয়।"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi সৃষ্টি অসামৰ্থবান কৰক"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi সৃষ্টি অসামৰ্থবান কৰক"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -853,8 +853,8 @@ msgstr "ইথাৰনেট (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
