--- a/po/ast.po
+++ b/po/ast.po
@@ -90,8 +90,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Usao p'afitar si hai que migrar los axustes a una versión nueva."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Desactivar crear WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Desactivar crear Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -872,8 +872,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3196,7 +3196,7 @@ msgstr "Seguridá 802.1X"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "Nun pudo cargase l'interfaz d'usuariu pa seguridá WiFi."
+msgstr "Nun pudo cargase l'interfaz d'usuariu pa seguridá Wi-Fi."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 #, fuzzy
@@ -3369,7 +3369,7 @@ msgstr ""
 #: ../src/connection-editor/page-infiniband.c:151
 #, fuzzy
 msgid "Could not load InfiniBand user interface."
-msgstr "Nun pudo cargase l'interfaz d'usuariu pa WiFi."
+msgstr "Nun pudo cargase l'interfaz d'usuariu pa Wi-Fi."
 
 #: ../src/connection-editor/page-infiniband.c:214
 msgid "infiniband device"
@@ -3748,7 +3748,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "Nun pudo cargase l'interfaz d'usuariu pa WiFi."
+msgstr "Nun pudo cargase l'interfaz d'usuariu pa Wi-Fi."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3792,8 +3792,8 @@ msgstr "WPA y WPA2 Enterprise"
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Nun pudo cargase l'interfaz d'usuariu pa seguridá WiFi; falten los axustes "
-"WiFi."
+"Nun pudo cargase l'interfaz d'usuariu pa seguridá Wi-Fi; falten los axustes "
+"Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 #, fuzzy
@@ -3803,7 +3803,7 @@ msgstr "Seguridá inalámbrica"
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "Nun pudo cargase l'interfaz d'usuariu pa seguridá WiFi."
+msgstr "Nun pudo cargase l'interfaz d'usuariu pa seguridá Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
