--- a/po/bs.po
+++ b/po/bs.po
@@ -83,7 +83,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Ovo određuje da li treba prevesti podešavanja na novo izdanje."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Onemogući kreiranje bežične mreže"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -447,7 +447,7 @@ msgstr "Uključi _mrežne usluge"
 #. 'Enable Wi-Fi' item
 #: ../src/applet.c:1825
 msgid "Enable _Wi-Fi"
-msgstr "Uključi _bežičnu WiFi mrežu"
+msgstr "Uključi _bežičnu Wi-Fi mrežu"
 
 #. 'Enable Mobile Broadband' item
 #: ../src/applet.c:1834
@@ -857,8 +857,8 @@ msgstr "Eternet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
