--- a/po/crh.po
+++ b/po/crh.po
@@ -94,8 +94,8 @@ msgstr ""
 "qullanılır."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi (Telsiz Vefa) İcat Et Ğayrı Qabilleştirilsin"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi (Telsiz Vefa) İcat Et Ğayrı Qabilleştirilsin"
 
 # tüklü
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -866,8 +866,8 @@ msgstr "Eternet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -5190,21 +5190,21 @@ msgstr "_Tür:"
 #~ msgid "Wireless"
 #~ msgstr "Telsiz"
 
-#~ msgid "Could not load WiFi user interface."
+#~ msgid "Could not load Wi-Fi user interface."
 #~ msgstr "Wifi (Telsiz Vefa) qullanıcı arayüzü yüklenamadı."
 
 #~ msgid "Wireless connection %d"
 #~ msgstr "Telsiz bağlantı %d"
 
-#~ msgid "Could not load WiFi security user interface; missing WiFi setting."
+#~ msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 #~ msgstr ""
-#~ "Wifi (Telsiz Vefa) emniyeti qullanıcı arayüzü yüklenamadı; WiFi ayarı "
+#~ "Wifi (Telsiz Vefa) emniyeti qullanıcı arayüzü yüklenamadı; Wi-Fi ayarı "
 #~ "eksik."
 
 #~ msgid "Wireless Security"
 #~ msgstr "Telsiz Emniyet"
 
-#~ msgid "Could not load WiFi security user interface."
+#~ msgid "Could not load Wi-Fi security user interface."
 #~ msgstr "Wifi (Telsiz Vefa) emniyeti qullanıcı arayüzü yüklenamadı."
 
 #~ msgid "Error creating connection editor dialog."
