--- a/po/dz.po
+++ b/po/dz.po
@@ -85,7 +85,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -843,7 +843,7 @@ msgstr "ཝའིརཌི་ཨི་ཐར་ནེཊི་(%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr ""
 
 #: ../src/applet-dialogs.c:502
