--- a/po/el.po
+++ b/po/el.po
@@ -96,7 +96,7 @@ msgstr ""
 "νέα έκδοση."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Απενεργοποίηση δημιουργίας ασύρματου δικτύου"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -863,8 +863,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
