--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -87,8 +87,8 @@ msgstr ""
 "Used to determine whether settings should be migrated to a new version."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
+msgstr "Disable Wi-Fi Create"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -860,8 +860,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
