--- a/po/eu.po
+++ b/po/eu.po
@@ -90,8 +90,8 @@ msgstr ""
 "Ezarpenak bertsio berrira migratuko diren edo ez  ezartzeko erabiltzen da."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Desgaitu WiFiaren sorrera"
+msgid "Disable Wi-Fi Create"
+msgstr "Desgaitu Wi-Fiaren sorrera"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -862,8 +862,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi-a (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi-a (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3723,7 +3723,7 @@ msgstr "%u (%u MHz)"
 
 #: ../src/connection-editor/page-wifi.c:442
 msgid "Could not load Wi-Fi user interface."
-msgstr "Ezin izan da WiFiarentzako erabiltzailearen interfazea kargatu."
+msgstr "Ezin izan da Wi-Fiarentzako erabiltzailearen interfazea kargatu."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -5174,7 +5174,7 @@ msgstr "_Mota:"
 #~ msgstr "'%s' haririk gabeko sareko konexioa aktibo"
 
 #~ msgid "Could not load Wired Security security user interface."
-#~ msgstr "Ezin izan da WiFiaren segurtasunerako interfazea kargatu."
+#~ msgstr "Ezin izan da Wi-Fiaren segurtasunerako interfazea kargatu."
 
 #~ msgid "Wireless"
 #~ msgstr "Haririk gabekoa"
