--- a/po/fa.po
+++ b/po/fa.po
@@ -92,7 +92,7 @@ msgstr ""
 "استفاده قرار می‌گیرد."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "غیرفعال‌سازی ساخت وای‌فای"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -874,8 +874,8 @@ msgstr "اترنت (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3349,7 +3349,7 @@ msgstr ""
 #: ../src/connection-editor/page-infiniband.c:151
 #, fuzzy
 msgid "Could not load InfiniBand user interface."
-msgstr "امکان بارگزاری واسط کاربری WiFi وجود ندارد."
+msgstr "امکان بارگزاری واسط کاربری Wi-Fi وجود ندارد."
 
 #: ../src/connection-editor/page-infiniband.c:214
 msgid "infiniband device"
@@ -3727,7 +3727,7 @@ msgstr "%Iu (%Iu مگاهرتز)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "امکان بارگزاری واسط کاربری WiFi وجود ندارد."
+msgstr "امکان بارگزاری واسط کاربری Wi-Fi وجود ندارد."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
