--- a/po/fi.po
+++ b/po/fi.po
@@ -102,8 +102,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Määrittää, tuodaanko asetukset uuteen versioon."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Estä WiFi-luonti"
+msgid "Disable Wi-Fi Create"
+msgstr "Estä Wi-Fi-luonti"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -862,8 +862,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3724,7 +3724,7 @@ msgstr "WPA2 Enterprise"
 #: ../src/connection-editor/page-wifi-security.c:461
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Turvallisuuskäyttöliittymää wifille ei voitu ladata. WiFi-asetus puuttuu."
+"Turvallisuuskäyttöliittymää wifille ei voitu ladata. Wi-Fi-asetus puuttuu."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 msgid "Wi-Fi Security"
@@ -3732,7 +3732,7 @@ msgstr "Wifi-tietoturva"
 
 #: ../src/connection-editor/page-wifi-security.c:474
 msgid "Could not load Wi-Fi security user interface."
-msgstr "Turvallisuuskäyttöliittymää WiFi:lle ei voitu ladata."
+msgstr "Turvallisuuskäyttöliittymää Wi-Fi:lle ei voitu ladata."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
