--- a/po/gd.po
+++ b/po/gd.po
@@ -80,7 +80,7 @@ msgid ""
 "Set this to true to disable notifications when Wi-Fi networks are available."
 msgstr ""
 "Tagh TRUE airson seo mur eil thu ag iarraidh brathan nuair a bhios "
-"lìonraidhean WiFi ri làimh."
+"lìonraidhean Wi-Fi ri làimh."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:9
 msgid "Stamp"
@@ -93,8 +93,8 @@ msgstr ""
 "tionndadh ùr gus nach dèid."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Cur à comas cruthachadh WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Cur à comas cruthachadh Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -461,7 +461,7 @@ msgstr "Cuir lìonraidhean a_n comas"
 #. 'Enable Wi-Fi' item
 #: ../src/applet.c:1825
 msgid "Enable _Wi-Fi"
-msgstr "Cuir an comas _WiFi"
+msgstr "Cuir an comas _Wi-Fi"
 
 #. 'Enable Mobile Broadband' item
 #: ../src/applet.c:1834
@@ -692,11 +692,11 @@ msgstr "Dearbhadh  DSL"
 
 #: ../src/applet-device-wifi.c:225
 msgid "_Connect to Hidden Wi-Fi Network…"
-msgstr "_Ceangail ri lìonra WiFi falaichte..."
+msgstr "_Ceangail ri lìonra Wi-Fi falaichte..."
 
 #: ../src/applet-device-wifi.c:276
 msgid "Create _New Wi-Fi Network…"
-msgstr "Cruthaich lìonra WiFi ù_r..."
+msgstr "Cruthaich lìonra Wi-Fi ù_r..."
 
 #: ../src/applet-device-wifi.c:358
 msgid "(none)"
@@ -713,28 +713,28 @@ msgstr ""
 #: ../src/applet-device-wifi.c:838
 #, c-format
 msgid "Wi-Fi Networks (%s)"
-msgstr "Lìonraidhean WiFi (%s)"
+msgstr "Lìonraidhean Wi-Fi (%s)"
 
 #: ../src/applet-device-wifi.c:840
 #, c-format
 msgid "Wi-Fi Network (%s)"
-msgstr "Lìonra WiFi (%s)"
+msgstr "Lìonra Wi-Fi (%s)"
 
 #: ../src/applet-device-wifi.c:842
 msgid "Wi-Fi Network"
 msgid_plural "Wi-Fi Networks"
-msgstr[0] "Lìonra WiFi"
-msgstr[1] "Lìonraidhean WiFi"
-msgstr[2] "Lìonraidhean WiFi"
-msgstr[3] "Lìonraidhean WiFi"
+msgstr[0] "Lìonra Wi-Fi"
+msgstr[1] "Lìonraidhean Wi-Fi"
+msgstr[2] "Lìonraidhean Wi-Fi"
+msgstr[3] "Lìonraidhean Wi-Fi"
 
 #: ../src/applet-device-wifi.c:871
 msgid "Wi-Fi is disabled"
-msgstr "Tha WiFi à comas"
+msgstr "Tha Wi-Fi à comas"
 
 #: ../src/applet-device-wifi.c:872
 msgid "Wi-Fi is disabled by hardware switch"
-msgstr "Chaidh am WiFi a chur à comas le suidse chruaidh"
+msgstr "Chaidh am Wi-Fi a chur à comas le suidse chruaidh"
 
 #: ../src/applet-device-wifi.c:933
 msgid "More networks"
@@ -742,12 +742,12 @@ msgstr "Barrachd lìonraidhean"
 
 #: ../src/applet-device-wifi.c:1122
 msgid "Wi-Fi Networks Available"
-msgstr "Lìonraidhean WiFi a tha ri làimh"
+msgstr "Lìonraidhean Wi-Fi a tha ri làimh"
 
 #: ../src/applet-device-wifi.c:1123
 msgid "Use the network menu to connect to a Wi-Fi network"
 msgstr ""
-"Cleachd clàr-taice nan lìonraidhean gus ceangal a dhèanamh ri lìonra WiFi"
+"Cleachd clàr-taice nan lìonraidhean gus ceangal a dhèanamh ri lìonra Wi-Fi"
 
 #: ../src/applet-device-wifi.c:1307
 #, c-format
@@ -757,34 +757,34 @@ msgstr "Tha thu air ceangal a dhèanamh ris an lìonra Wi-Fi \"%s\"."
 #: ../src/applet-device-wifi.c:1342
 #, c-format
 msgid "Preparing Wi-Fi network connection “%s”…"
-msgstr "Ag ullachadh ceangal lìonraidh WiFi \"%s\"..."
+msgstr "Ag ullachadh ceangal lìonraidh Wi-Fi \"%s\"..."
 
 #: ../src/applet-device-wifi.c:1345
 #, c-format
 msgid "Configuring Wi-Fi network connection “%s”…"
-msgstr "A' rèiteachadh ceangail lìonra WiFi \"%s\"..."
+msgstr "A' rèiteachadh ceangail lìonra Wi-Fi \"%s\"..."
 
 #: ../src/applet-device-wifi.c:1348
 #, c-format
 msgid "User authentication required for Wi-Fi network “%s”…"
 msgstr ""
 "Tha feum air dearbhadh a' chleachdaiche mus gabh ceangal a dhèanamh ris an "
-"lìonra WiFi \"%s\"..."
+"lìonra Wi-Fi \"%s\"..."
 
 #: ../src/applet-device-wifi.c:1351
 #, c-format
 msgid "Requesting a Wi-Fi network address for “%s”…"
-msgstr "Ag iarraidh seòladh lìonra WiFi airson \"%s\"..."
+msgstr "Ag iarraidh seòladh lìonra Wi-Fi airson \"%s\"..."
 
 #: ../src/applet-device-wifi.c:1362
 #, c-format
 msgid "Wi-Fi network connection “%s” active: %s (%d%%)"
-msgstr "Tha an ceangal lìonra WiFi \"%s\" gnìomhach: %s (%d%%)"
+msgstr "Tha an ceangal lìonra Wi-Fi \"%s\" gnìomhach: %s (%d%%)"
 
 #: ../src/applet-device-wifi.c:1366
 #, c-format
 msgid "Wi-Fi network connection “%s” active"
-msgstr "Tha an ceangal lìonra WiFi \"%s\" gnìomhach"
+msgstr "Tha an ceangal lìonra Wi-Fi \"%s\" gnìomhach"
 
 #: ../src/applet-device-wifi.c:1385
 msgid "Failed to activate connection"
@@ -870,8 +870,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -2769,7 +2769,7 @@ msgstr ""
 #: ../src/connection-editor/connection-helpers.c:105
 #: ../src/connection-editor/page-wifi.c:440 ../src/libnm-gtk/nm-ui-utils.c:323
 msgid "Wi-Fi"
-msgstr "WiFi"
+msgstr "Wi-Fi"
 
 #: ../src/connection-editor/connection-helpers.c:113
 #: ../src/connection-editor/page-bluetooth.c:123
@@ -3688,7 +3688,7 @@ msgid ""
 "This option locks this connection to the Wi-Fi access point (AP) specified "
 "by the BSSID entered here. Example: 00:11:22:33:44:55"
 msgstr ""
-"Tha an roghainn seo a’ glasadh a' cheangal seo ris a' phuing-inntrigidh WiFi "
+"Tha an roghainn seo a’ glasadh a' cheangal seo ris a' phuing-inntrigidh Wi-Fi "
 "(AP) a tha 'ga shònrachadh leis a' BSSID a chaidh a chur a-steach an-seo. "
 "Ball-eisimpleir: 00:11:22:33:44:55"
 
@@ -3710,7 +3710,7 @@ msgstr "%u (%u MHz)"
 
 #: ../src/connection-editor/page-wifi.c:442
 msgid "Could not load Wi-Fi user interface."
-msgstr "Cha b' urrainn dhuinn eadar-aghaidh cleachdaiche WiFi a luchdadh."
+msgstr "Cha b' urrainn dhuinn eadar-aghaidh cleachdaiche Wi-Fi a luchdadh."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3718,12 +3718,12 @@ msgstr "bssid"
 
 #: ../src/connection-editor/page-wifi.c:570
 msgid "Wi-Fi device"
-msgstr "Uidheam WiFi"
+msgstr "Uidheam Wi-Fi"
 
 #: ../src/connection-editor/page-wifi.c:617
 #, c-format
 msgid "Wi-Fi connection %d"
-msgstr "Ceangal WiFi %d"
+msgstr "Ceangal Wi-Fi %d"
 
 #: ../src/connection-editor/page-wifi-security.c:356
 #: ../src/libnma/nma-wifi-dialog.c:923 ../src/libnm-gtk/nm-wifi-dialog.c:922
@@ -3752,18 +3752,18 @@ msgstr "WPA & WPA2 Enterprise"
 #: ../src/connection-editor/page-wifi-security.c:461
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Cha b' urrainn an eadar-aghaidh cleachdaiche airson tèarainteachd WiFi a "
-"luchdadh; tha roghainn WiFi a dhith."
+"Cha b' urrainn an eadar-aghaidh cleachdaiche airson tèarainteachd Wi-Fi a "
+"luchdadh; tha roghainn Wi-Fi a dhith."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 msgid "Wi-Fi Security"
-msgstr "Tèarainteachd WiFi"
+msgstr "Tèarainteachd Wi-Fi"
 
 #: ../src/connection-editor/page-wifi-security.c:474
 msgid "Could not load Wi-Fi security user interface."
 msgstr ""
 "Cha b' urrainn dhuinn an eadar-aghaidh cleachdaiche airson tèarainteachd "
-"WiFi a luchdadh."
+"Wi-Fi a luchdadh."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
@@ -4213,47 +4213,47 @@ msgid ""
 "Passwords or encryption keys are required to access the Wi-Fi network “%s”."
 msgstr ""
 "Tha feum air faclan-faire no iuchraichean crioptachaidh mus fhaighear "
-"cothrom air an lìonra WiFi \"%s\"."
+"cothrom air an lìonra Wi-Fi \"%s\"."
 
 #: ../src/libnma/nma-wifi-dialog.c:1162 ../src/libnm-gtk/nm-wifi-dialog.c:1163
 msgid "Wi-Fi Network Authentication Required"
-msgstr "Tha feum air dearbhadh lìonra WiFi"
+msgstr "Tha feum air dearbhadh lìonra Wi-Fi"
 
 #: ../src/libnma/nma-wifi-dialog.c:1164 ../src/libnm-gtk/nm-wifi-dialog.c:1165
 msgid "Authentication required by Wi-Fi network"
-msgstr "Tha an lìonra WiFi ag iarraidh dearbhadh"
+msgstr "Tha an lìonra Wi-Fi ag iarraidh dearbhadh"
 
 #: ../src/libnma/nma-wifi-dialog.c:1169 ../src/libnm-gtk/nm-wifi-dialog.c:1170
 msgid "Create New Wi-Fi Network"
-msgstr "Cruthaich lìonra WiFi ùr"
+msgstr "Cruthaich lìonra Wi-Fi ùr"
 
 #: ../src/libnma/nma-wifi-dialog.c:1171 ../src/libnm-gtk/nm-wifi-dialog.c:1172
 msgid "New Wi-Fi network"
-msgstr "Lìonra WiFi ùr"
+msgstr "Lìonra Wi-Fi ùr"
 
 #: ../src/libnma/nma-wifi-dialog.c:1172 ../src/libnm-gtk/nm-wifi-dialog.c:1173
 msgid "Enter a name for the Wi-Fi network you wish to create."
-msgstr "Cuir a-steach ainm airson an lìonra WiFi a tha thu airson cruthachadh."
+msgstr "Cuir a-steach ainm airson an lìonra Wi-Fi a tha thu airson cruthachadh."
 
 #: ../src/libnma/nma-wifi-dialog.c:1174 ../src/libnm-gtk/nm-wifi-dialog.c:1175
 msgid "Connect to Hidden Wi-Fi Network"
-msgstr "Ceangail ri lìonra WiFi falaichte"
+msgstr "Ceangail ri lìonra Wi-Fi falaichte"
 
 #: ../src/libnma/nma-wifi-dialog.c:1176 ../src/libnm-gtk/nm-wifi-dialog.c:1177
 msgid "Hidden Wi-Fi network"
-msgstr "Lìonra WiFi falaichte"
+msgstr "Lìonra Wi-Fi falaichte"
 
 #: ../src/libnma/nma-wifi-dialog.c:1177 ../src/libnm-gtk/nm-wifi-dialog.c:1178
 msgid ""
 "Enter the name and security details of the hidden Wi-Fi network you wish to "
 "connect to."
 msgstr ""
-"Cuir a-steach ainm agus fiosrachadh tèarainteachd an lìonraidh WiFi "
+"Cuir a-steach ainm agus fiosrachadh tèarainteachd an lìonraidh Wi-Fi "
 "fhalaichte a tha thu airson ceangal ris."
 
 #: ../src/libnma/wifi.ui.h:1 ../src/libnm-gtk/wifi.ui.h:1
 msgid "Wi-Fi _security:"
-msgstr "_Tèarainteachd WiFi:"
+msgstr "_Tèarainteachd Wi-Fi:"
 
 #: ../src/libnma/wifi.ui.h:3 ../src/libnm-gtk/wifi.ui.h:3
 msgid "C_onnection:"
@@ -4261,7 +4261,7 @@ msgstr "C_eangal:"
 
 #: ../src/libnma/wifi.ui.h:4 ../src/libnm-gtk/wifi.ui.h:4
 msgid "Wi-Fi _adapter:"
-msgstr "_Adaptar WiFi:"
+msgstr "_Adaptar Wi-Fi:"
 
 #: ../src/libnm-gtk/nm-ui-utils.c:302 ../src/libnm-gtk/nm-ui-utils.c:369
 msgid "Wired"
@@ -4807,10 +4807,10 @@ msgstr "_Seòrsa:"
 #~ msgstr "Ceangal bann-leathainn mobile ùr..."
 
 #~ msgid "_Connect to Hidden Wi-Fi Network..."
-#~ msgstr "_Ceangail ri lìonra WiFi falaichte..."
+#~ msgstr "_Ceangail ri lìonra Wi-Fi falaichte..."
 
 #~ msgid "Create _New Wi-Fi Network..."
-#~ msgstr "Cruthaich lìonra WiFi ù_r..."
+#~ msgstr "Cruthaich lìonra Wi-Fi ù_r..."
 
 #~ msgid " "
 #~ msgstr " "
@@ -5188,7 +5188,7 @@ msgstr "_Seòrsa:"
 #~ "a Certificate Authority certificate?"
 #~ msgstr ""
 #~ "Mur an cleachd thu teisteanas Certificate Authority (CA), dh'fhaoidte gun "
-#~ "ceanglar ri lìonraidhean WiFi neo-thèarainte is droch-rùnach. A bheil thu "
+#~ "ceanglar ri lìonraidhean Wi-Fi neo-thèarainte is droch-rùnach. A bheil thu "
 #~ "airson teisteanas Certificate Authority a chruthachadh an-dràsta?"
 
 #~ msgid "Don't _warn me again"
