--- a/po/gu.po
+++ b/po/gu.po
@@ -93,8 +93,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "નક્કી કરવા માટે વાપરેલ છે ક્યાંતો સુયોજનો અ નવી આવૃત્તિમાં સ્થળાંતર થયેલ હોવા જોઇએ."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi બનાવવાનું નિષ્ક્રિય કરો"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi બનાવવાનું નિષ્ક્રિય કરો"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -855,8 +855,8 @@ msgstr "ઇથરનેટ (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3677,7 +3677,7 @@ msgstr "%u (%u MHz)"
 
 #: ../src/connection-editor/page-wifi.c:442
 msgid "Could not load Wi-Fi user interface."
-msgstr "WiFi વપરાશકર્તા ઇન્ટરફેસને લાવી શક્યા નહિં."
+msgstr "Wi-Fi વપરાશકર્તા ઇન્ટરફેસને લાવી શક્યા નહિં."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -5011,7 +5011,7 @@ msgstr "પ્રકાર (_T):"
 #~ msgid "Automatic (PPP) addresses only"
 #~ msgstr "ફક્ત સ્વયં (PPP) સરનામાંઓ"
 
-#~| msgid "Could not load WiFi user interface."
+#~| msgid "Could not load Wi-Fi user interface."
 #~ msgid "Could not load WiMAX user interface."
 #~ msgstr "WiMAX વપરાશકર્તા ઇન્ટરફેસને લાવી શક્યા નહિં."
 
