--- a/po/hi.po
+++ b/po/hi.po
@@ -91,8 +91,8 @@ msgstr ""
 "निर्धारित करने के लिए प्रयुक्त कि क्या सेटिंग को नए संस्करण में उत्प्रवासित करना चाहिए."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi निर्माण निष्क्रिय करें"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi निर्माण निष्क्रिय करें"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -851,8 +851,8 @@ msgstr "इथरनेट (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -4896,7 +4896,7 @@ msgstr "प्रकार (_T):"
 #~ msgid "Automatic (PPP) addresses only"
 #~ msgstr "स्वचालित (PPP) पता केवल"
 
-#~| msgid "Could not load WiFi user interface."
+#~| msgid "Could not load Wi-Fi user interface."
 #~ msgid "Could not load WiMAX user interface."
 #~ msgstr "WiMAX उपयोक्ता अंतरफलक लोड नहीं कर सका."
 
@@ -5016,7 +5016,7 @@ msgstr "प्रकार (_T):"
 #~ msgid "Wireless network connection '%s' active"
 #~ msgstr "बेतार संजाल संबंधन '%s' सक्रिय"
 
-#~| msgid "Could not load WiFi security user interface."
+#~| msgid "Could not load Wi-Fi security user interface."
 #~ msgid "Could not load Wired Security security user interface."
 #~ msgstr "तार युक्त सुरक्षा सुरक्षा उपयोगकर्ता इंटरफ़ेस लोड नहीं कर सका."
 
