--- a/po/ja.po
+++ b/po/ja.po
@@ -95,7 +95,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "設定を、新規バージョンに移行すべきかどうかの判定に使用されます。"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Wi-Fi の作成を無効にする"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -880,7 +880,7 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
