--- a/po/km.po
+++ b/po/km.po
@@ -83,7 +83,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "ត្រូវ​បាន​ប្រើ ដើម្បី​កំណត់​ថា​តើ​គួរតែ​ប្ដូរ​ការ​កំណត់​ទៅ​ជា​កំណែ​ថ្មី​ដែរ​ឬ​ទេ។"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "បិទ​ការ​បង្កើត​វ៉ាយហ្វាយ"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -841,8 +841,8 @@ msgstr "អ៊ឺសឺរណិត (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
