--- a/po/kn.po
+++ b/po/kn.po
@@ -96,8 +96,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "ಸಿದ್ಧತೆಗಳನ್ನು ಹೊಸ ಆವೃತ್ತಿಗೆ ವರ್ಗಾಯಿಸಬೇಕೆ ಎಂದು ನಿರ್ಧರಿಸಲು ಬಳಸಲಾಗುತ್ತದೆ"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi ನಿರ್ಮಿಸುವುದನ್ನು ಅಶಕ್ತಗೊಳಿಸು"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi ನಿರ್ಮಿಸುವುದನ್ನು ಅಶಕ್ತಗೊಳಿಸು"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -879,8 +879,8 @@ msgstr "ಇತರ್ನೆಟ್ (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3203,7 +3203,7 @@ msgstr "802.1X ಸುರಕ್ಷತೆ"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "WiFi ಸುರಕ್ಷತಾ ಬಳಕೆದಾರ ಸಂಪರ್ಕಸಾಧನವನ್ನು ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ."
+msgstr "Wi-Fi ಸುರಕ್ಷತಾ ಬಳಕೆದಾರ ಸಂಪರ್ಕಸಾಧನವನ್ನು ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 #, fuzzy
@@ -3756,7 +3756,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "WiFi ಬಳಕೆದಾರ ಸಂಪರ್ಕಸಾಧನವನ್ನು ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ."
+msgstr "Wi-Fi ಬಳಕೆದಾರ ಸಂಪರ್ಕಸಾಧನವನ್ನು ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3800,7 +3800,7 @@ msgstr "WPA & WPA2 ಎಂಟರ್ಪ್ರೈಸ್"
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"WiFi ಸುರಕ್ಷತಾ ಬಳಕೆದಾರ ಸಂಪರ್ಕಸಾಧನವನ್ನು ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ; WiFi ಸಿದ್ಧತೆಯು "
+"Wi-Fi ಸುರಕ್ಷತಾ ಬಳಕೆದಾರ ಸಂಪರ್ಕಸಾಧನವನ್ನು ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ; Wi-Fi ಸಿದ್ಧತೆಯು "
 "ಕಾಣೆಯಾಗಿದೆ."
 
 #: ../src/connection-editor/page-wifi-security.c:472
@@ -3811,7 +3811,7 @@ msgstr "ವೈರ್ಲೆಸ್ ಸುರಕ್ಷತೆ"
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "WiFi ಸುರಕ್ಷತಾ ಬಳಕೆದಾರ ಸಂಪರ್ಕಸಾಧನವನ್ನು ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ."
+msgstr "Wi-Fi ಸುರಕ್ಷತಾ ಬಳಕೆದಾರ ಸಂಪರ್ಕಸಾಧನವನ್ನು ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
