--- a/po/mk.po
+++ b/po/mk.po
@@ -99,8 +99,8 @@ msgstr ""
 "верзија."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Оневозможи креирање на WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Оневозможи креирање на Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -887,8 +887,8 @@ msgstr "Етернет (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3213,7 +3213,7 @@ msgstr "802.1X безбедност"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "Не можев да го вчитам корисничкиот интерфејс за безбедност на WiFi."
+msgstr "Не можев да го вчитам корисничкиот интерфејс за безбедност на Wi-Fi."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 #, fuzzy
@@ -3386,7 +3386,7 @@ msgstr ""
 #: ../src/connection-editor/page-infiniband.c:151
 #, fuzzy
 msgid "Could not load InfiniBand user interface."
-msgstr "Не можев да го вчитам корисничкиот интерфејс за WiFi."
+msgstr "Не можев да го вчитам корисничкиот интерфејс за Wi-Fi."
 
 #: ../src/connection-editor/page-infiniband.c:214
 msgid "infiniband device"
@@ -3769,7 +3769,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "Не можев да го вчитам корисничкиот интерфејс за WiFi."
+msgstr "Не можев да го вчитам корисничкиот интерфејс за Wi-Fi."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3813,8 +3813,8 @@ msgstr "WPA & WPA2 Enterprise"
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Не можев да го вчитам корисничкиот интерфејс за безбедност на WiFi. "
-"Недостасува поставувањето за WiFi."
+"Не можев да го вчитам корисничкиот интерфејс за безбедност на Wi-Fi. "
+"Недостасува поставувањето за Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 #, fuzzy
@@ -3824,7 +3824,7 @@ msgstr "Безжична безбедност"
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "Не можев да го вчитам корисничкиот интерфејс за безбедност на WiFi."
+msgstr "Не можев да го вчитам корисничкиот интерфејс за безбедност на Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
