--- a/po/ml.po
+++ b/po/ml.po
@@ -89,7 +89,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "സജ്ജീകരണങ്ങള്‍ പുതിയ പതിപ്പില്‍ നീക്കേണ്ടതുണ്ടോ എന്നു് നിശ്ചയിക്കുന്നതിനായി ഉപയോഗിക്കുന്നു."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "വൈഫൈ ഉണ്ടാക്കുന്നതു് പ്രവര്‍ത്തന രഹിതമാക്കുക"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -859,7 +859,7 @@ msgstr "ഇതര്‍നെറ്റ് (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 വൈഫൈ (%s)"
 
 #: ../src/applet-dialogs.c:502
