--- a/po/mr.po
+++ b/po/mr.po
@@ -86,8 +86,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "सेटिंग्स्ला नवीन आवृत्तीकरीता स्थानांतरीत करायचे, हे ओळखण्यासाठी वापर केला जातो."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi निर्माण बंद करा"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi निर्माण बंद करा"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -866,8 +866,8 @@ msgstr "इथरनेट (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3164,7 +3164,7 @@ msgstr "802.1X सुरक्षा"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "WiFi सुरक्षा वापरकर्ता संवाद लोड करणे अशक्य."
+msgstr "Wi-Fi सुरक्षा वापरकर्ता संवाद लोड करणे अशक्य."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 #, fuzzy
@@ -3715,7 +3715,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "WiFi वापरकर्ता संवाद लोड करणे अशक्य."
+msgstr "Wi-Fi वापरकर्ता संवाद लोड करणे अशक्य."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3758,7 +3758,7 @@ msgstr "WPA & WPA2 एन्टरप्राइज"
 #: ../src/connection-editor/page-wifi-security.c:461
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
-msgstr "WiFi सुरक्षा वापरकर्ता संवाद लोड करणे अशक्य; WiFi संयोजना आढळली नाही."
+msgstr "Wi-Fi सुरक्षा वापरकर्ता संवाद लोड करणे अशक्य; Wi-Fi संयोजना आढळली नाही."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 #, fuzzy
@@ -3768,7 +3768,7 @@ msgstr "वायरलेस सुरक्षा"
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "WiFi सुरक्षा वापरकर्ता संवाद लोड करणे अशक्य."
+msgstr "Wi-Fi सुरक्षा वापरकर्ता संवाद लोड करणे अशक्य."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
@@ -4948,7 +4948,7 @@ msgstr "प्रकार (_T):"
 #~ msgid "Automatic (PPP) addresses only"
 #~ msgstr "फक्त स्वयं (PPP) पत्ते"
 
-#~| msgid "Could not load WiFi security user interface."
+#~| msgid "Could not load Wi-Fi security user interface."
 #~ msgid "Could not load Wired Security security user interface."
 #~ msgstr "वायर्ड सेक्युरिटि सुरक्षा वापरकर्ता संवाद लोड करणे अशक्य."
 
