--- a/po/nb.po
+++ b/po/nb.po
@@ -87,8 +87,8 @@ msgstr ""
 "Brukes til å bestemme om innstillingene skal migreres til en ny versjon."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Slå av oppretting av WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Slå av oppretting av Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -852,8 +852,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3742,7 +3742,7 @@ msgstr "WPA og WPA2 enterprise"
 #: ../src/connection-editor/page-wifi-security.c:461
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Kunne ikke laste brukergrensesnitt for Wi-Fi-sikkerhet; mangler WiFi-"
+"Kunne ikke laste brukergrensesnitt for Wi-Fi-sikkerhet; mangler Wi-Fi-"
 "innstilling."
 
 #: ../src/connection-editor/page-wifi-security.c:472
