--- a/po/nl.po
+++ b/po/nl.po
@@ -100,7 +100,7 @@ msgstr ""
 "nieuwe versie."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Wifi-aanmaken uitschakelen"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -929,8 +929,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
