--- a/po/or.po
+++ b/po/or.po
@@ -91,8 +91,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "ବିନ୍ୟାସକୁ ଗୋଟିଏ ନୂତନ ସଂସ୍କରଣକୁ ସ୍ଥାନାନ୍ତରଣ କରିବା ଉଚିତ କି ନୁହଁ ତାହା ନିର୍ଦ୍ଧାରଣ କରୁଅଛି।"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi ନିର୍ମାଣକୁ ନିଷ୍କ୍ରିୟ କରନ୍ତୁ"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi ନିର୍ମାଣକୁ ନିଷ୍କ୍ରିୟ କରନ୍ତୁ"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -873,8 +873,8 @@ msgstr "ଇଥରନେଟ (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3190,7 +3190,7 @@ msgstr "802.1X ସୁରକ୍ଷା"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "WiFi ସୁରକ୍ଷା ଚାଳକ ଅନ୍ତରାପୃଷ୍ଠକୁ ଧାରଣ କରିପାରିଲା ନାହିଁ।"
+msgstr "Wi-Fi ସୁରକ୍ଷା ଚାଳକ ଅନ୍ତରାପୃଷ୍ଠକୁ ଧାରଣ କରିପାରିଲା ନାହିଁ।"
 
 #: ../src/connection-editor/page-8021x-security.c:125
 #, fuzzy
@@ -3742,7 +3742,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "WiFi ଚାଳକ ଅନ୍ତରାପୃଷ୍ଠକୁ ଧାରଣ କରାଯାଇପାରିଲା ନାହିଁ।"
+msgstr "Wi-Fi ଚାଳକ ଅନ୍ତରାପୃଷ୍ଠକୁ ଧାରଣ କରାଯାଇପାରିଲା ନାହିଁ।"
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3785,7 +3785,7 @@ msgstr "WPA & WPA2 ଉଦ୍ଦୋଗ"
 #: ../src/connection-editor/page-wifi-security.c:461
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
-msgstr "WiFi ସୁରକ୍ଷା ଅନ୍ତରାପୃଷ୍ଠକୁ ଧାରଣ କରିପାରିଲା ନାହିଁ; WiFi ସଂରଚନା ଅନୁପସ୍ଥିତ ଅଛି।"
+msgstr "Wi-Fi ସୁରକ୍ଷା ଅନ୍ତରାପୃଷ୍ଠକୁ ଧାରଣ କରିପାରିଲା ନାହିଁ; Wi-Fi ସଂରଚନା ଅନୁପସ୍ଥିତ ଅଛି।"
 
 #: ../src/connection-editor/page-wifi-security.c:472
 #, fuzzy
@@ -3795,7 +3795,7 @@ msgstr "ବେତାର ସୁରକ୍ଷା"
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "WiFi ସୁରକ୍ଷା ଚାଳକ ଅନ୍ତରାପୃଷ୍ଠକୁ ଧାରଣ କରିପାରିଲା ନାହିଁ।"
+msgstr "Wi-Fi ସୁରକ୍ଷା ଚାଳକ ଅନ୍ତରାପୃଷ୍ଠକୁ ଧାରଣ କରିପାରିଲା ନାହିଁ।"
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
