--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -107,7 +107,7 @@ msgstr ""
 "versão."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Desabilitar criação de Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -895,7 +895,7 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
