--- a/po/ro.po
+++ b/po/ro.po
@@ -95,8 +95,8 @@ msgstr ""
 "versiune."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Dezactivare creare WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Dezactivare creare Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -844,8 +844,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -2444,7 +2444,7 @@ msgstr "Securitate 802.1x"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1x Security user interface."
-msgstr "Nu s-a putut încărca interfața de utilizator pentru securitate WiFi."
+msgstr "Nu s-a putut încărca interfața de utilizator pentru securitate Wi-Fi."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 #, fuzzy
@@ -2620,7 +2620,7 @@ msgstr ""
 #: ../src/connection-editor/page-infiniband.c:153
 #, fuzzy
 msgid "Could not load InfiniBand user interface."
-msgstr "Nu s-a putut încărca interfața de utilizator pentru conexiunile WiFi."
+msgstr "Nu s-a putut încărca interfața de utilizator pentru conexiunile Wi-Fi."
 
 #: ../src/connection-editor/page-infiniband.c:216
 msgid "infiniband device"
@@ -3004,7 +3004,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:450
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "Nu s-a putut încărca interfața de utilizator pentru conexiunile WiFi."
+msgstr "Nu s-a putut încărca interfața de utilizator pentru conexiunile Wi-Fi."
 
 #: ../src/connection-editor/page-wifi.c:571
 msgid "bssid"
@@ -3049,8 +3049,8 @@ msgstr "WPA și WPA2"
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Nu s-a putut încărca interfața de utilizator pentru securitate WiFi; lipsesc "
-"configurări WiFi."
+"Nu s-a putut încărca interfața de utilizator pentru securitate Wi-Fi; lipsesc "
+"configurări Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:424
 #, fuzzy
@@ -3060,7 +3060,7 @@ msgstr "Securitate fără  fir"
 #: ../src/connection-editor/page-wifi-security.c:426
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "Nu s-a putut încărca interfața de utilizator pentru securitate WiFi."
+msgstr "Nu s-a putut încărca interfața de utilizator pentru securitate Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:506
 #, c-format
