--- a/po/sr.po
+++ b/po/sr.po
@@ -91,7 +91,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Ово одређује да ли треба превести подешавања на ново издање."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Онемогући образовање бежичне мреже"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -876,7 +876,7 @@ msgstr "Жичана мрежа (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 бежична (%s)"
 
 #: ../src/applet-dialogs.c:503
