--- a/po/ta.po
+++ b/po/ta.po
@@ -102,8 +102,8 @@ msgstr ""
 "Used to determine whether settings should be migrated to a new version."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "செயல்நீக்க WiFiஐ உருவாக்கு"
+msgid "Disable Wi-Fi Create"
+msgstr "செயல்நீக்க Wi-Fiஐ உருவாக்கு"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -882,8 +882,8 @@ msgstr "ஈதர்நெட் (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3177,7 +3177,7 @@ msgstr "802.1X பாதுகாப்பு"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "WiFi பாதுகாப்பு பயனர் இடைமுகத்தை ஏற்ற முடியவில்லை."
+msgstr "Wi-Fi பாதுகாப்பு பயனர் இடைமுகத்தை ஏற்ற முடியவில்லை."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -3728,7 +3728,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "WiFi பயனர் இடைமுகத்தை ஏற்ற முடியவில்லை."
+msgstr "Wi-Fi பயனர் இடைமுகத்தை ஏற்ற முடியவில்லை."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3771,7 +3771,7 @@ msgstr "WPA & WPA2 கடவுச்சொல்"
 #: ../src/connection-editor/page-wifi-security.c:461
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
-msgstr "WiFi பாதுகாப்பு பயனர் இடைமுகத்தை ஏற்ற முடியவில்லை; விடுபட்ட WiFi அமைவுகள்."
+msgstr "Wi-Fi பாதுகாப்பு பயனர் இடைமுகத்தை ஏற்ற முடியவில்லை; விடுபட்ட Wi-Fi அமைவுகள்."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 #, fuzzy
@@ -3781,7 +3781,7 @@ msgstr "ஒயர்லெஸ் பாதுகாப்பு"
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "WiFi பாதுகாப்பு பயனர் இடைமுகத்தை ஏற்ற முடியவில்லை."
+msgstr "Wi-Fi பாதுகாப்பு பயனர் இடைமுகத்தை ஏற்ற முடியவில்லை."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
