--- a/po/te.po
+++ b/po/te.po
@@ -91,8 +91,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "అమరికలు కొత్త వర్షన్‌కు మైగ్రేట్ కావాలా అనేది నిర్ణయించుటకు వుపయోగించబడుతుంది."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi సృష్టించుట అచేతనము చేయుము"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi సృష్టించుట అచేతనము చేయుము"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -862,8 +862,8 @@ msgstr "ఈథర్‌నెట్ (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3148,7 +3148,7 @@ msgstr "802.1X రక్షణ"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "WiFi రక్షణ వినియోగదారి యింటర్ఫేస్‌ను లోడుచేయలేకపోయింది."
+msgstr "Wi-Fi రక్షణ వినియోగదారి యింటర్ఫేస్‌ను లోడుచేయలేకపోయింది."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -3694,7 +3694,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "WiFi వినియోగదారి యింటర్ఫేస్‌ను లోడుచేయలేక పోయింది."
+msgstr "Wi-Fi వినియోగదారి యింటర్ఫేస్‌ను లోడుచేయలేక పోయింది."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3737,7 +3737,7 @@ msgstr "WPA & WPA2 ఎంటర్‌ప్రైజ్"
 #: ../src/connection-editor/page-wifi-security.c:461
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
-msgstr "WiFi రక్షణ వినియోగదారి యింటర్ఫేస్‌ను లోడుచేయలేకపోయింది; WiFi అమరిక తప్పిపోయింది."
+msgstr "Wi-Fi రక్షణ వినియోగదారి యింటర్ఫేస్‌ను లోడుచేయలేకపోయింది; Wi-Fi అమరిక తప్పిపోయింది."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 #, fuzzy
@@ -3747,7 +3747,7 @@ msgstr "వైర్‌లేనివిధానికి రక్షణ"
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "WiFi రక్షణ వినియోగదారి యింటర్ఫేస్‌ను లోడుచేయలేకపోయింది."
+msgstr "Wi-Fi రక్షణ వినియోగదారి యింటర్ఫేస్‌ను లోడుచేయలేకపోయింది."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
