--- a/po/tg.po
+++ b/po/tg.po
@@ -99,7 +99,7 @@ msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
 #, fuzzy
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Ғайрифаъол кардан"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -889,8 +889,8 @@ msgstr "Шабакаи Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -4118,7 +4118,7 @@ msgstr "Минтақа ё кишвари худро интихоб намоед.
 msgid "Country or region"
 msgstr ""
 "<li>Кишвар, шаҳр ё кӯчаи мехостагиро ёфт кунед.</li> <li>Маконҳои махсусро, "
-"масалан “Каҳвахонаи Нигина дар назди роҳи асосӣ” ё ”Нуқтаи дастраси WiFi дар "
+"масалан “Каҳвахонаи Нигина дар назди роҳи асосӣ” ё ”Нуқтаи дастраси Wi-Fi дар "
 "назди боғи Рӯдаки” пайдо кунед.</li>"
 
 #: ../src/libnma/nma-mobile-wizard.c:1076
