--- a/po/th.po
+++ b/po/th.po
@@ -83,8 +83,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "ใช้ในการกำหนดว่าควรแปลงค่าตั้งไปเป็นรุ่นใหม่หรือไม่"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "ปิดการสร้าง WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "ปิดการสร้าง Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -853,8 +853,8 @@ msgstr "อีเทอร์เน็ต (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3132,7 +3132,7 @@ msgstr "การรักษาความปลอดภัย 802.1X"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับการรักษาความปลอดภัย WiFi"
+msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับการรักษาความปลอดภัย Wi-Fi"
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -3304,7 +3304,7 @@ msgstr ""
 #: ../src/connection-editor/page-infiniband.c:151
 #, fuzzy
 msgid "Could not load InfiniBand user interface."
-msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับ WiFi"
+msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับ Wi-Fi"
 
 #: ../src/connection-editor/page-infiniband.c:214
 msgid "infiniband device"
@@ -3678,7 +3678,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับ WiFi"
+msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับ Wi-Fi"
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3721,7 +3721,7 @@ msgstr "WPA & WPA2 เอนเทอร์ไพรส์"
 #: ../src/connection-editor/page-wifi-security.c:461
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
-msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับการรักษาความปลอดภัย WiFi; ไม่ได้ตั้งค่า WiFi ไว้"
+msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับการรักษาความปลอดภัย Wi-Fi; ไม่ได้ตั้งค่า Wi-Fi ไว้"
 
 #: ../src/connection-editor/page-wifi-security.c:472
 #, fuzzy
@@ -3731,7 +3731,7 @@ msgstr "การรักษาความปลอดภัยเครือ
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับการรักษาความปลอดภัย WiFi"
+msgstr "ไม่สามารถโหลดส่วนติดต่อผู้ใช้สำหรับการรักษาความปลอดภัย Wi-Fi"
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
