--- a/po/ug.po
+++ b/po/ug.po
@@ -89,8 +89,8 @@ msgstr ""
 "تەڭشەكلەرنىڭ يېڭى بىر نۇسخىغا كۆچۈش-كۆچۈرمەسلىكنى بەلگىلەش ئۈچۈن ئىشلىتىلىدۇ."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "سىمسىز تور WiFi قۇرۇشنى تاقا"
+msgid "Disable Wi-Fi Create"
+msgstr "سىمسىز تور Wi-Fi قۇرۇشنى تاقا"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -859,8 +859,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
