--- a/po/ur.po
+++ b/po/ur.po
@@ -95,8 +95,8 @@ msgstr ""
 "چاہئیں یا نہیں."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi کو بنانا معطل کریں"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi کو بنانا معطل کریں"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -884,8 +884,8 @@ msgstr "ایتھرنیٹ (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3204,7 +3204,7 @@ msgstr "802.1X سیکورٹی"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "وائی فائی WiFi سیکورٹی صارف مواجہ لوڈ نہیں ہوسکتا."
+msgstr "وائی فائی Wi-Fi سیکورٹی صارف مواجہ لوڈ نہیں ہوسکتا."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 #, fuzzy
@@ -3370,7 +3370,7 @@ msgstr ""
 #: ../src/connection-editor/page-infiniband.c:151
 #, fuzzy
 msgid "Could not load InfiniBand user interface."
-msgstr "WiFi صارف مواجہ لوڈ نہیں ہوسکتا"
+msgstr "Wi-Fi صارف مواجہ لوڈ نہیں ہوسکتا"
 
 #: ../src/connection-editor/page-infiniband.c:214
 msgid "infiniband device"
@@ -3753,7 +3753,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "WiFi صارف مواجہ لوڈ نہیں ہوسکتا"
+msgstr "Wi-Fi صارف مواجہ لوڈ نہیں ہوسکتا"
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3798,7 +3798,7 @@ msgstr "WPA & WPA2 انٹرپرائز"
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"وائی فائی WiFi سیکورٹی صارف مواجہ لوڈ نہیں ہوسکتا، WiFi ترتیاب مفقود ہے."
+"وائی فائی Wi-Fi سیکورٹی صارف مواجہ لوڈ نہیں ہوسکتا، Wi-Fi ترتیاب مفقود ہے."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 #, fuzzy
@@ -3808,7 +3808,7 @@ msgstr "وائیرلیس سیکورٹی"
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "وائی فائی WiFi سیکورٹی صارف مواجہ لوڈ نہیں ہوسکتا."
+msgstr "وائی فائی Wi-Fi سیکورٹی صارف مواجہ لوڈ نہیں ہوسکتا."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
