--- a/po/vi.po
+++ b/po/vi.po
@@ -82,8 +82,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Dùng để xác định thiết lập có được chuyển sang phiên bản mới không."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Tắt tạo WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Tắt tạo Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -840,8 +840,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
