--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -86,7 +86,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "用來決定設定是不是要轉移到新版本上。"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "禁止建立 Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -865,8 +865,8 @@ msgstr "乙太網路 (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
