--- a/po/be.po
+++ b/po/be.po
@@ -80,8 +80,8 @@ msgstr ""
 "Выкарыстоўваецца для вызначэння патрэбы ў міграцыі настроек на новую версію."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Выключыць магчымасць стварэння WiFi-сеткі"
+msgid "Disable Wi-Fi Create"
+msgstr "Выключыць магчымасць стварэння Wi-Fi-сеткі"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -849,8 +849,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3722,7 +3722,7 @@ msgstr "%u (%u МГц)"
 #: ../src/connection-editor/page-wifi.c:442
 msgid "Could not load Wi-Fi user interface."
 msgstr ""
-"Не ўдалося загрузіць інтэрфейс карыстальніка для змянення настроек WiFi."
+"Не ўдалося загрузіць інтэрфейс карыстальніка для змянення настроек Wi-Fi."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3766,7 +3766,7 @@ msgstr "WPA & WPA2 Enterprise"
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
 "Не ўдалося загрузіць інтэрфейс карыстальніка для змянення настроек бяспекі "
-"WiFi. Адсутнічае настройка Wi-Fi."
+"Wi-Fi. Адсутнічае настройка Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 msgid "Wi-Fi Security"
@@ -3776,7 +3776,7 @@ msgstr "Бяспека Wi-Fi"
 msgid "Could not load Wi-Fi security user interface."
 msgstr ""
 "Не ўдалося загрузіць інтэрфейс карыстальніка для змянення настроек бяспекі "
-"WiFi."
+"Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
