--- a/po/be@latin.po
+++ b/po/be@latin.po
@@ -83,7 +83,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -874,8 +874,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
