--- a/po/bg.po
+++ b/po/bg.po
@@ -91,7 +91,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Ключът указва дали настройките да се мигрират към нова версия."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Забраняване на създаването на безжична мрежа"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -861,8 +861,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3781,8 +3781,8 @@ msgstr "Корпоративна WPA & WPA2"
 #: ../src/connection-editor/page-wifi-security.c:461
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Потребителският интерфейс за сигурност на WiFi не може да се зареди. Липсват "
-"настройките за WiFi."
+"Потребителският интерфейс за сигурност на Wi-Fi не може да се зареди. Липсват "
+"настройките за Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 msgid "Wi-Fi Security"
@@ -3790,7 +3790,7 @@ msgstr "Защита на безжична мрежа"
 
 #: ../src/connection-editor/page-wifi-security.c:474
 msgid "Could not load Wi-Fi security user interface."
-msgstr "Потребителският интерфейс за сигурност на WiFi не може да се зареди."
+msgstr "Потребителският интерфейс за сигурност на Wi-Fi не може да се зареди."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
