--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -101,7 +101,7 @@ msgstr ""
 "হয়।"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "ওয়াই-ফাই নির্মাণ নিষ্ক্রিয় করুন"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -882,7 +882,7 @@ msgstr "ইথারনেট (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 ওয়াই-ফাই (%s)"
 
 #: ../src/applet-dialogs.c:502
@@ -3759,7 +3759,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "WiFi ইউজার ইন্টারফেস লোড করা যায়নি।"
+msgstr "Wi-Fi ইউজার ইন্টারফেস লোড করা যায়নি।"
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
