--- a/po/ca@valencia.po
+++ b/po/ca@valencia.po
@@ -94,7 +94,7 @@ msgstr ""
 "S'utilitza per determinar si cal migrar els paràmetres a una versió nova."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Inhabilita la creació de connexions sense fil"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -872,7 +872,7 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "Wi-Fi 802.11 (%s)"
 
 #: ../src/applet-dialogs.c:502
