--- a/po/cs.po
+++ b/po/cs.po
@@ -91,8 +91,8 @@ msgstr ""
 "Účelem je zjištění, zda by měla být nastavení přenesena na novou verzi."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Zakázat vytváření WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Zakázat vytváření Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -870,8 +870,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
