--- a/po/da.po
+++ b/po/da.po
@@ -105,7 +105,7 @@ msgstr ""
 "ny version."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Afbryd oprettelse af wi-fi-forbindelse"
 
 # Skal "true" oversættes? Senere oversættes "false" ikke.
@@ -897,8 +897,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
