--- a/po/eo.po
+++ b/po/eo.po
@@ -93,7 +93,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Uzita por determini ĉu agordoj devus esti migrigita al nova versio."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Elŝalti kreon de sendrataj konektoj"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -874,7 +874,7 @@ msgstr "Eterreto (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "Sendrata reto laŭ 802.11 (%s)"
 
 #: ../src/applet-dialogs.c:503
@@ -3686,7 +3686,7 @@ msgstr ""
 
 #: ../src/connection-editor/page-macsec.c:192
 #, fuzzy
-#| msgid "Could not load WiFi user interface."
+#| msgid "Could not load Wi-Fi user interface."
 msgid "Could not load MACsec user interface."
 msgstr "Ne eblas ŝargi uzantinterfacon por sendrataj konektoj."
 
