--- a/po/gl.po
+++ b/po/gl.po
@@ -99,7 +99,7 @@ msgstr ""
 "versión."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Desactivar a creación de rede sen fíos"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -891,8 +891,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
