--- a/po/hr.po
+++ b/po/hr.po
@@ -88,7 +88,7 @@ msgstr ""
 "inačicu."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Onemogući stvaranje bežične mreže"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -873,8 +873,8 @@ msgstr "Žična mreža (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
