--- a/po/hu.po
+++ b/po/hu.po
@@ -90,7 +90,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "A szükség van-e a beállítások új verzióra költöztetésére."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Wi-Fi létrehozás kikapcsolása"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -861,8 +861,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
