--- a/po/id.po
+++ b/po/id.po
@@ -91,8 +91,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Dipakai untuk menentukan apakah tatanan mesti dipindah ke versi baru."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Matikan Pembuatan WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Matikan Pembuatan Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -873,8 +873,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "WiFi 802.11 (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "Wi-Fi 802.11 (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
