--- a/po/is.po
+++ b/po/is.po
@@ -87,8 +87,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Notað til að ákvarða hvort stillingar skuli yfirfærðar í nýja útgáfu."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Gera óvirkt að búa til ný WiFi-net"
+msgid "Disable Wi-Fi Create"
+msgstr "Gera óvirkt að búa til ný Wi-Fi-net"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -869,8 +869,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
