--- a/po/kk.po
+++ b/po/kk.po
@@ -87,8 +87,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "WiFi жасауды сөндіру"
+msgid "Disable Wi-Fi Create"
+msgstr "Wi-Fi жасауды сөндіру"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -862,8 +862,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
