--- a/po/ko.po
+++ b/po/ko.po
@@ -95,7 +95,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "설정을 새로운 버전으로 옮겨야 할지를 결정하려고 사용합니다."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "와이파이 만들기 사용하지 않음"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -881,7 +881,7 @@ msgstr "이더넷(%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 와이파이(%s)"
 
 #: ../src/applet-dialogs.c:503
