--- a/po/ku.po
+++ b/po/ku.po
@@ -81,7 +81,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -846,8 +846,8 @@ msgstr "Tora biqablo (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
