--- a/po/lv.po
+++ b/po/lv.po
@@ -95,8 +95,8 @@ msgstr ""
 "Izmanto, lai noteiktu, vai iestatījumus vajadzētu pārnest uz jauno versiju."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Izslēgt WiFi izveidošanu"
+msgid "Disable Wi-Fi Create"
+msgstr "Izslēgt Wi-Fi izveidošanu"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -883,8 +883,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
