--- a/po/ms.po
+++ b/po/ms.po
@@ -96,8 +96,8 @@ msgstr ""
 "versi baharu."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Lumpuhkan Cipta WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Lumpuhkan Cipta Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -877,8 +877,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3189,7 +3189,7 @@ msgstr "Keselamatan 802.1X"
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
-msgstr "Tidak dapat memuatkan antaramuka pengguna keselamatan WiFi."
+msgstr "Tidak dapat memuatkan antaramuka pengguna keselamatan Wi-Fi."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 #, fuzzy
@@ -3362,7 +3362,7 @@ msgstr ""
 #: ../src/connection-editor/page-infiniband.c:151
 #, fuzzy
 msgid "Could not load InfiniBand user interface."
-msgstr "Tidak dapat memuatkan antaramuka pengguna WiFi."
+msgstr "Tidak dapat memuatkan antaramuka pengguna Wi-Fi."
 
 #: ../src/connection-editor/page-infiniband.c:214
 msgid "infiniband device"
@@ -3743,7 +3743,7 @@ msgstr "%u (%u MHz)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "Tidak dapat memuatkan antaramuka pengguna WiFi."
+msgstr "Tidak dapat memuatkan antaramuka pengguna Wi-Fi."
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3787,7 +3787,7 @@ msgstr "WPA & WPA2 Perusahaan"
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Tidak dapat memuatkan antaramuka keselamatan pengguna WiFi; tetapan WiFi "
+"Tidak dapat memuatkan antaramuka keselamatan pengguna Wi-Fi; tetapan Wi-Fi "
 "hilang."
 
 #: ../src/connection-editor/page-wifi-security.c:472
@@ -3798,7 +3798,7 @@ msgstr "Sekuriti Wayarles"
 #: ../src/connection-editor/page-wifi-security.c:474
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
-msgstr "Tidak dapat memuatkan antaramuka pengguna keselamatan WiFi."
+msgstr "Tidak dapat memuatkan antaramuka pengguna keselamatan Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
