--- a/po/nn.po
+++ b/po/nn.po
@@ -90,7 +90,7 @@ msgstr ""
 "Brukt til å fastslå om innstillingar skal verta migrert til ein ny versjon."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Slå av laging av trådlaust nettverk"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -868,8 +868,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
