--- a/po/oc.po
+++ b/po/oc.po
@@ -93,8 +93,8 @@ msgstr ""
 "novèla."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Desactivar la creacion WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Desactivar la creacion Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -868,7 +868,7 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "Wifi 802.11 (%s)"
 
 #: ../src/applet-dialogs.c:502
