--- a/po/pa.po
+++ b/po/pa.po
@@ -91,7 +91,7 @@ msgstr ""
 "ਪਤਾ ਕਰਨ ਲਈ ਵਰਤਿਆ ਜਾਂਦਾ ਹੈ ਕਿ ਸੈਟਿੰਗ ਨਵੇਂ ਵਰਜਨ ਲਈ ਮਾਈਗਰੇਟ ਕਰਨੀਆਂ ਚਾਹੀਦੀਆਂ ਹਨ।"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Wi-Fi ਬਣਾਉਣਾ ਅਸਮਰੱਥ ਕਰੋ"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -869,8 +869,8 @@ msgstr "ਈਥਰਨੈੱਟ (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
