--- a/po/sk.po
+++ b/po/sk.po
@@ -105,8 +105,8 @@ msgstr "Použité na zistenie, či majú byť nastavenia migrované na novú ver
 
 # gsettings summary
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Zakázať vytváranie WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Zakázať vytváranie Wi-Fi"
 
 # gsettings description
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -905,8 +905,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
