--- a/po/sl.po
+++ b/po/sl.po
@@ -91,8 +91,8 @@ msgstr ""
 "Uporabljeno za določanje ali naj bodo nastavitve preseljene v novo različico."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Onemogoči ustvarjanje WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Onemogoči ustvarjanje Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -855,8 +855,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3759,7 +3759,7 @@ msgstr "Podjetniški WPA in WPA2"
 #: ../src/connection-editor/page-wifi-security.c:461
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Uporabniškega vmesnika varnosti WiFi ni mogoče naložiti; manjka nastavitev "
+"Uporabniškega vmesnika varnosti Wi-Fi ni mogoče naložiti; manjka nastavitev "
 "Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:472
