--- a/po/sq.po
+++ b/po/sq.po
@@ -80,7 +80,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr ""
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -811,7 +811,7 @@ msgstr ""
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr ""
 
 #: ../src/applet-dialogs.c:502
