--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -91,7 +91,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "Ovo određuje da li treba prevesti podešavanja na novo izdanje."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Onemogući obrazovanje bežične mreže"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -876,7 +876,7 @@ msgstr "Žičana mreža (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 bežična (%s)"
 
 #: ../src/applet-dialogs.c:503
