--- a/po/sv.po
+++ b/po/sv.po
@@ -95,7 +95,7 @@ msgstr ""
 "version."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Inaktivera skapande av trådlöst nätverk"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -891,8 +891,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
