--- a/po/tr.po
+++ b/po/tr.po
@@ -98,7 +98,7 @@ msgstr ""
 "kullanılır."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Kablosuz bağlantı oluşturmayı engelle"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -885,7 +885,7 @@ msgstr "Kablolu Bağlantı (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "802.11 Kablosuz (%s)"
 
 #: ../src/applet-dialogs.c:503
