--- a/po/uk.po
+++ b/po/uk.po
@@ -91,8 +91,8 @@ msgstr ""
 "версію."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Вимкнути створення з'єднання WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Вимкнути створення з'єднання Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 #, fuzzy
@@ -866,8 +866,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -3174,7 +3174,7 @@ msgstr "Захист 802.1X"
 #, fuzzy
 msgid "Could not load 802.1X Security user interface."
 msgstr ""
-"Не вдалось завантажити інтерфейс налаштовування захисту з'єднання WiFi."
+"Не вдалось завантажити інтерфейс налаштовування захисту з'єднання Wi-Fi."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -3358,7 +3358,7 @@ msgstr ""
 #: ../src/connection-editor/page-infiniband.c:151
 #, fuzzy
 msgid "Could not load InfiniBand user interface."
-msgstr "Не вдалось завантажити інтерфейс користувача для налаштовування WiFi"
+msgstr "Не вдалось завантажити інтерфейс користувача для налаштовування Wi-Fi"
 
 #: ../src/connection-editor/page-infiniband.c:214
 msgid "infiniband device"
@@ -3745,7 +3745,7 @@ msgstr "%u (%u МГц)"
 #: ../src/connection-editor/page-wifi.c:442
 #, fuzzy
 msgid "Could not load Wi-Fi user interface."
-msgstr "Не вдалось завантажити інтерфейс користувача для налаштовування WiFi"
+msgstr "Не вдалось завантажити інтерфейс користувача для налаштовування Wi-Fi"
 
 #: ../src/connection-editor/page-wifi.c:564
 msgid "bssid"
@@ -3789,8 +3789,8 @@ msgstr "WPA & WPA2 Enterprise"
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
 msgstr ""
-"Не вдалось завантажити інтерфейс налаштовування захисту з'єднання WiFi, "
-"налаштовування WiFi пропускається."
+"Не вдалось завантажити інтерфейс налаштовування захисту з'єднання Wi-Fi, "
+"налаштовування Wi-Fi пропускається."
 
 #: ../src/connection-editor/page-wifi-security.c:472
 #, fuzzy
@@ -3801,7 +3801,7 @@ msgstr "Захист бездротової мережі"
 #, fuzzy
 msgid "Could not load Wi-Fi security user interface."
 msgstr ""
-"Не вдалось завантажити інтерфейс налаштовування захисту з'єднання WiFi."
+"Не вдалось завантажити інтерфейс налаштовування захисту з'єднання Wi-Fi."
 
 #: ../src/connection-editor/page-wifi-security.c:558
 #, c-format
