--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -91,8 +91,8 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "用于决定设置是否应被迁移至一个新版本。"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "禁用 WiFi 建立"
+msgid "Disable Wi-Fi Create"
+msgstr "禁用 Wi-Fi 建立"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -875,8 +875,8 @@ msgstr "以太网(%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
